[package]
name = "json_exporter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
reqwest = "0.11.4"
tokio = { version = "1.11.0", features = ["full"] }
serde = "1.0.130"
serde_json = "1.0.67"
convert_case = "0.1.0"
rocket = "0.5.0-rc.1"
serde_yaml = "0.8"
jql = "2.9.5"